Added resizing of images
